# whatsnext

./: .gitignore  Anchor.toml  Cargo.toml  README.md  index.html  package-lock.json  package.json
backend-rs/: .gitignore  Cargo.toml
backend-rs/migrations/: 20251127094816_init_schema.sql
backend-rs/src/: config.rs  constants.rs  db.rs  lib.rs  main.rs  repository.rs  scheduler.rs  solana_client.rs  state.rs
backend-rs/src/oracle/: binance.rs  mod.rs  tradingview.rs  types.rs
backend-rs/src/routes/: claim.rs  health.rs  market.rs  mod.rs  oracle.rs  pnl.rs  positions.rs  prices.rs  treasury.rs
frontend/: package-lock.json  package.json  vite.config.ts
frontend/public/: candle_markets.json
frontend/src/: App.css  App.tsx  candle_markets.json  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: AssetCard.tsx  BackendChart.tsx  PositionsTable.tsx  RealChart.tsx  Sidebar.tsx  Tabs.tsx  TestAnchor.tsx  Topbar.tsx  TradingViewChart.tsx
frontend/src/contexts/: WalletContent.tsx  WalletContext.tsx
frontend/src/data/: assets.ts
frontend/src/hooks/: useAnchorProgram.ts  useBalance.ts  useMarketTimer.ts  useOHLCFeed.ts  usePriceFeed.ts  useSolPrice.ts
frontend/src/pages/: Dashboard.tsx  LandingPage.tsx  Leaderboard.tsx  MyPositions.tsx  Wallet.tsx
frontend/src/store/: useMarketStore.ts  useMarketTimerStore.ts  useOHLCStore.ts  usePositionsStore.ts
frontend/src/styles/: dashboard.css  landing.css  topbar.css
frontend/src/utils/: get4HWindow.ts  mapToTVSymbol.ts  marketSymbols.ts  pda.ts
programs/candle_markets/: Anchor.toml  Cargo.toml
programs/candle_markets/programs/candle_markets/: Cargo.toml
programs/candle_markets/programs/candle_markets/src/: lib.rs  state.rs
programs/candle_markets/src/: lib.rs  state.rs
programs/candle_markets/tests/: candle_markets.ts
scripts/: init_treasury.ts  test_ts.ts
