[package]
name = "backend-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "backend_rs"
path = "src/lib.rs"

[dependencies]
# Web framework
axum = "0.7"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for price APIs
reqwest = { version = "0.11", features = ["json"] }

# JSON parsing
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Anchor client
anchor-client = "0.32"

# Solana SDK
solana-sdk = "2.0"
solana-client = "2.0"
solana-system-interface = "2.0"

# Environment variables
dotenvy = "0.15"

# Cron scheduling
tokio-cron-scheduler = "0.10"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Import on-chain program
candle_markets = { path = "/home/siphonite/whatsnext/programs/candle_markets/programs/candle_markets" }

# Error handling + timestamps
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
hyper = { version = "1.8.1", features = ["full"] } 

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "migrate", "bigdecimal"] }

bigdecimal = "0.4"
