[package]
name = "backend-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "backend_rs"
path = "src/lib.rs"

[dependencies]
# Web framework (latest stable)
axum = "0.7.9"

# Async runtime
tokio = { version = "1.36", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# JSON parsing
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Anchor client
anchor-client = "0.32"

# Solana SDK
solana-sdk = "2.0"
solana-client = "2.0"
solana-system-interface = "2.0"

# Environment variables
dotenvy = "0.15"

# Cron scheduling
tokio-cron-scheduler = "0.10"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Local on-chain program
candle_markets = { path = "../programs/candle_markets" }

# Time + error handling
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Hyper 1.x (required by Axum 0.7)
hyper = { version = "1.3", features = ["full"] }

# Tower (required by Axum service traits)
tower = "0.4.13"

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "chrono",
    "migrate",
    "bigdecimal"
] }

# NUMERIC handling
bigdecimal = "0.4"
tower-http = { version = "0.6.8", features = ["cors"] }
