[package]
name = "candle_markets"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"

[features]
no-entrypoint = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(solana)', 'cfg(cpi)', 'cfg(custom-heap)', 'cfg(custom-panic)', 'cfg(anchor-debug)', 'cfg(no-idl)', 'cfg(no-log-ix-name)'] }

